force-app/main/default/objects/SPEN_Delivery__c/fields/SPEN_AcceptanceDate__c.field-meta.xml
<CustomField>
    <fullName>SPEN_AcceptanceDate__c</fullName>
    <label>Acceptance Date</label>
    <type>Date</type>
</CustomField>