force-app/main/default/objects/SPEN_Delivery__c/fields/SPEN_AcceptanceDescription__c.field-meta.xml
<CustomField>
    <fullName>SPEN_AcceptanceDescription__c</fullName>
    <label>Acceptance Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>