force-app/main/default/objects/SPEN_Delivery__c/fields/SPEN_AcceptanceStatus__c.field-meta.xml
<CustomField>
    <fullName>SPEN_AcceptanceStatus__c</fullName>
    <label>Acceptance Status</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>