force-app/main/default/objects/SPEN_Delivery__c/fields/SPEN_AdditionalData1__c.field-meta.xml
<CustomField>
    <fullName>SPEN_AdditionalData1__c</fullName>
    <label>Project Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>