force-app/main/default/objects/SPEN_Delivery__c/fields/SPEN_AdditionalData2__c.field-meta.xml
<CustomField>
    <fullName>SPEN_AdditionalData2__c</fullName>
    <label>PPM Initiative Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>