force-app/main/default/objects/SPEN_Delivery__c/fields/SPEN_AdditionalData3__c.field-meta.xml
<CustomField>
    <fullName>SPEN_AdditionalData3__c</fullName>
    <label>Additional Data 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>