force-app/main/default/objects/SPEN_Delivery__c/fields/SPEN_AdditionalDeliveryDetails__c.field-meta.xml
<CustomField>
    <fullName>SPEN_AdditionalDeliveryDetails__c</fullName>
    <label>Additional Delivery Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>