force-app/main/default/objects/SPEN_Delivery__c/fields/SPEN_Case_Owner_On_Quote_Status__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Case_Owner_On_Quote_Status__c</fullName>
    <label>Designer Responsible Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>