force-app/main/default/objects/SPEN_Delivery__c/fields/SPEN_CaseDistrict__c.field-meta.xml
<CustomField>
    <fullName>SPEN_CaseDistrict__c</fullName>
    <formula>SPEN_Case__r.SPEN_ConnectionDistrict__c</formula>
    <label>Case District</label>
    <type>Text</type>
</CustomField>