force-app/main/default/objects/SPEN_Delivery__c/fields/SPEN_CaseOwner__c.field-meta.xml
<CustomField>
    <fullName>SPEN_CaseOwner__c</fullName>
    <formula>if( SPEN_Case__r.Owner:Queue.QueueName != null, SPEN_Case__r.Owner:Queue.QueueName ,SPEN_Case__r.Owner:User.FirstName +  SPEN_Case__r.Owner:User.LastName )</formula>
    <label>Case Owner</label>
    <type>Text</type>
</CustomField>