force-app/main/default/objects/SPEN_Delivery__c/fields/SPEN_CaseSAPRefFormula__c.field-meta.xml
<CustomField>
    <fullName>SPEN_CaseSAPRefFormula__c</fullName>
    <description>CRMD-1342</description>
    <formula>SPEN_Case__r.SPEN_SAPReference__c</formula>
    <label>Case SAPRef Formula</label>
    <type>Text</type>
</CustomField>