force-app/main/default/objects/SPEN_Delivery__c/fields/SPEN_CaseStatus__c.field-meta.xml
<CustomField>
    <fullName>SPEN_CaseStatus__c</fullName>
    <formula>Text(SPEN_Case__r.Status)</formula>
    <label>Case Status</label>
    <type>Text</type>
</CustomField>