force-app/main/default/objects/SPEN_Delivery__c/fields/SPEN_CollectionPayment__c.field-meta.xml
<CustomField>
    <fullName>SPEN_CollectionPayment__c</fullName>
    <label>Collection Payment</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>