force-app/main/default/objects/SPEN_Delivery__c/fields/SPEN_ConnectionLive__c.field-meta.xml
<CustomField>
    <fullName>SPEN_ConnectionLive__c</fullName>
    <label>Connection Live</label>
    <type>Date</type>
</CustomField>