force-app/main/default/objects/SPEN_Delivery__c/fields/SPEN_CSSurveyDate__c.field-meta.xml
<CustomField>
    <fullName>SPEN_CSSurveyDate__c</fullName>
    <label>CS Survey Date</label>
    <type>Date</type>
</CustomField>