force-app/main/default/objects/SPEN_Delivery__c/fields/SPEN_CSSurveyNotes__c.field-meta.xml
<CustomField>
    <fullName>SPEN_CSSurveyNotes__c</fullName>
    <label>CS Survey Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>