force-app/main/default/objects/SPEN_Delivery__c/fields/SPEN_CSSurveyStatus__c.field-meta.xml
<CustomField>
    <fullName>SPEN_CSSurveyStatus__c</fullName>
    <label>CS Survey Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Attempted</fullName>
            </value>
            <value>
                <fullName>Not Required</fullName>
            </value>
            <value>
                <fullName>Refused</fullName>
            </value>
            <value>
                <fullName>Successful - Fully Satisfied</fullName>
            </value>
            <value>
                <fullName>Successful - Happy but some issues</fullName>
            </value>
            <value>
                <fullName>Successful - Dissatisfaction requiring feedback</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>