force-app/main/default/objects/SPEN_Delivery__c/fields/SPEN_CTMeteringScheduled__c.field-meta.xml
<CustomField>
    <fullName>SPEN_CTMeteringScheduled__c</fullName>
    <label>CT Metering Scheduled</label>
    <type>Date</type>
</CustomField>