force-app/main/default/objects/SPEN_Delivery__c/fields/SPEN_CurrentProjectStatus__c.field-meta.xml
<CustomField>
    <fullName>SPEN_CurrentProjectStatus__c</fullName>
    <label>Current Project Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accepted Not Paid</fullName>
            </value>
            <value>
                <fullName>Awaiting Road Opening Notice</fullName>
            </value>
            <value>
                <fullName>Contractor</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
            <value>
                <fullName>Customer not Ready</fullName>
            </value>
            <value>
                <fullName>Embargo</fullName>
            </value>
            <value>
                <fullName>Network Issues</fullName>
            </value>
            <value>
                <fullName>Now Scheduled</fullName>
            </value>
            <value>
                <fullName>Other (Give Details)</fullName>
            </value>
            <value>
                <fullName>Pre-Vet</fullName>
            </value>
            <value>
                <fullName>Redesign/Variation</fullName>
            </value>
            <value>
                <fullName>Shut Down</fullName>
            </value>
            <value>
                <fullName>Waiting on Scheduled Date</fullName>
            </value>
            <value>
                <fullName>Wayleaves &amp; Planning</fullName>
            </value>
            <value>
                <fullName>Not Included Cancelled</fullName>
            </value>
            <value>
                <fullName>Not Included LV</fullName>
            </value>
            <value>
                <fullName>Not Included APOS</fullName>
            </value>
            <value>
                <fullName>Not Included PCP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>