force-app/main/default/objects/SPEN_Delivery__c/fields/SPEN_CustomerHandshake__c.field-meta.xml
<CustomField>
    <fullName>SPEN_CustomerHandshake__c</fullName>
    <label>Customer Handshake</label>
    <type>Date</type>
</CustomField>