force-app/main/default/objects/SPEN_Delivery__c/fields/SPEN_CustomerPrefConDate__c.field-meta.xml
<CustomField>
    <fullName>SPEN_CustomerPrefConDate__c</fullName>
    <label>Customer Pref Con. Date</label>
    <type>Date</type>
</CustomField>