force-app/main/default/objects/SPEN_Delivery__c/fields/SPEN_CustomerView__c.field-meta.xml
<CustomField>
    <fullName>SPEN_CustomerView__c</fullName>
    <label>Customer View</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ready</fullName>
            </value>
            <value>
                <fullName>Not Ready</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>