force-app/main/default/objects/SPEN_Delivery__c/fields/SPEN_DeliverablePostSite__c.field-meta.xml
<CustomField>
    <fullName>SPEN_DeliverablePostSite__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Deliverable (Post Site)</label>
    <type>Checkbox</type>
</CustomField>