force-app/main/default/objects/SPEN_Delivery__c/fields/SPEN_DeliveryProjectManager__c.field-meta.xml
<CustomField>
    <fullName>SPEN_DeliveryProjectManager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Delivery Project Manager</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>User.Department</field>
            <operation>notEqual</operation>
            <value>null</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Deliveries</relationshipName>
    <type>Lookup</type>
</CustomField>