force-app/main/default/objects/SPEN_Delivery__c/fields/SPEN_DeliveryType__c.field-meta.xml
<CustomField>
    <fullName>SPEN_DeliveryType__c</fullName>
    <label>Delivery Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Major</fullName>
            </value>
            <value>
                <fullName>Minor - Non TTC</fullName>
            </value>
            <value>
                <fullName>Minor - TTC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>