force-app/main/default/objects/SPEN_Delivery__c/fields/SPEN_DisconnectionD0125NotificationSent__c.field-meta.xml
<CustomField>
    <fullName>SPEN_DisconnectionD0125NotificationSent__c</fullName>
    <label>Disconnection D0125 Notification Sent</label>
    <type>Date</type>
</CustomField>