force-app/main/default/objects/SPEN_Delivery__c/fields/SPEN_DisconnectionD0352FlowRequired__c.field-meta.xml
<CustomField>
    <fullName>SPEN_DisconnectionD0352FlowRequired__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disconnection D0352 Flow Required</label>
    <type>Checkbox</type>
</CustomField>