force-app/main/default/objects/SPEN_Delivery__c/fields/SPEN_DisconnectionD0352FlowSent__c.field-meta.xml
<CustomField>
    <fullName>SPEN_DisconnectionD0352FlowSent__c</fullName>
    <label>Disconnection D0352 Flow Sent</label>
    <type>Date</type>
</CustomField>