force-app/main/default/objects/SPEN_Delivery__c/fields/SPEN_DisconnectionDate__c.field-meta.xml
<CustomField>
    <fullName>SPEN_DisconnectionDate__c</fullName>
    <label>Disconnection Date</label>
    <type>Date</type>
</CustomField>