force-app/main/default/objects/SPEN_Delivery__c/fields/SPEN_FittersScheduled__c.field-meta.xml
<CustomField>
    <fullName>SPEN_FittersScheduled__c</fullName>
    <label>Fitters Scheduled</label>
    <type>Date</type>
</CustomField>