force-app/main/default/objects/SPEN_Delivery__c/fields/SPEN_GSCallCompletionDate__c.field-meta.xml
<CustomField>
    <fullName>SPEN_GSCallCompletionDate__c</fullName>
    <label>GS Call Completion Date</label>
    <type>DateTime</type>
</CustomField>