force-app/main/default/objects/SPEN_Delivery__c/fields/SPEN_GSCallStatus__c.field-meta.xml
<CustomField>
    <fullName>SPEN_GSCallStatus__c</fullName>
    <label>GS Call Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Successful</fullName>
            </value>
            <value>
                <fullName>Unsuccessful</fullName>
            </value>
            <value>
                <fullName>Not Required</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>