force-app/main/default/objects/SPEN_Delivery__c/fields/SPEN_InternalMainsScheduled__c.field-meta.xml
<CustomField>
    <fullName>SPEN_InternalMainsScheduled__c</fullName>
    <label>Internal Mains Scheduled</label>
    <type>Date</type>
</CustomField>