force-app/main/default/objects/SPEN_Delivery__c/fields/SPEN_InvoiceContractNumber__c.field-meta.xml
<CustomField>
    <fullName>SPEN_InvoiceContractNumber__c</fullName>
    <label>Invoice/Contract Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>