force-app/main/default/objects/SPEN_Delivery__c/fields/SPEN_JointingScheduled__c.field-meta.xml
<CustomField>
    <fullName>SPEN_JointingScheduled__c</fullName>
    <description>8219 Post Delivery field</description>
    <label>Jointing Scheduled</label>
    <type>Date</type>
</CustomField>