force-app/main/default/objects/SPEN_Delivery__c/fields/SPEN_LinesmanScheduled__c.field-meta.xml
<CustomField>
    <fullName>SPEN_LinesmanScheduled__c</fullName>
    <label>Linesman Scheduled</label>
    <type>Date</type>
</CustomField>