force-app/main/default/objects/SPEN_Delivery__c/fields/SPEN_Notes__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Notes__c</fullName>
    <label>Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>