force-app/main/default/objects/SPEN_Delivery__c/fields/SPEN_NotReadyCallbackReminder__c.field-meta.xml
<CustomField>
    <fullName>SPEN_NotReadyCallbackReminder__c</fullName>
    <label>Not Ready - Call back Reminder:</label>
    <type>Date</type>
</CustomField>