force-app/main/default/objects/SPEN_Delivery__c/fields/SPEN_PaymentDate__c.field-meta.xml
<CustomField>
    <fullName>SPEN_PaymentDate__c</fullName>
    <description>CRMD-8219</description>
    <label>Payment Date</label>
    <type>Date</type>
</CustomField>