force-app/main/default/objects/SPEN_Delivery__c/fields/SPEN_PreSiteCompleted__c.field-meta.xml
<CustomField>
    <fullName>SPEN_PreSiteCompleted__c</fullName>
    <label>Pre-Site Completed</label>
    <type>Date</type>
</CustomField>