force-app/main/default/objects/SPEN_Delivery__c/fields/SPEN_PreSiteDate__c.field-meta.xml
<CustomField>
    <fullName>SPEN_PreSiteDate__c</fullName>
    <label>Pre-Site Date</label>
    <type>Date</type>
</CustomField>