force-app/main/default/objects/SPEN_Delivery__c/fields/SPEN_PreSiteRequired__c.field-meta.xml
<CustomField>
    <fullName>SPEN_PreSiteRequired__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pre Site Required</label>
    <type>Checkbox</type>
</CustomField>