force-app/main/default/objects/SPEN_Delivery__c/fields/SPEN_QuotationValidTo__c.field-meta.xml
<CustomField>
    <fullName>SPEN_QuotationValidTo__c</fullName>
    <label>Quotation Valid To</label>
    <type>Date</type>
</CustomField>