force-app/main/default/objects/SPEN_Delivery__c/fields/SPEn_QuoteType__c.field-meta.xml
<CustomField>
    <fullName>SPEn_QuoteType__c</fullName>
    <label>Quote Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>