force-app/main/default/objects/SPEN_Delivery__c/fields/SPEN_Reinstatement__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Reinstatement__c</fullName>
    <label>Reinstatement</label>
    <type>Date</type>
</CustomField>