force-app/main/default/objects/SPEN_Delivery__c/fields/SPEN_SAPDetails__c.field-meta.xml
<CustomField>
    <fullName>SPEN_SAPDetails__c</fullName>
    <label>SAP Callout Details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>