force-app/main/default/objects/SPEN_Delivery__c/fields/SPEN_SchedulingConfirmed__c.field-meta.xml
<CustomField>
    <fullName>SPEN_SchedulingConfirmed__c</fullName>
    <description>8219 Post delivery field</description>
    <label>Scheduling Confirmed</label>
    <type>Date</type>
</CustomField>