force-app/main/default/objects/SPEN_Delivery__c/fields/SPEN_SchedulingRequested__c.field-meta.xml
<CustomField>
    <fullName>SPEN_SchedulingRequested__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Scheduling Requested</label>
    <type>Checkbox</type>
</CustomField>