force-app/main/default/objects/SPEN_Delivery__c/fields/SPEN_ShutdownRequired__c.field-meta.xml
<CustomField>
    <fullName>SPEN_ShutdownRequired__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Shutdown Required</label>
    <type>Checkbox</type>
</CustomField>