force-app/main/default/objects/SPEN_Delivery__c/fields/SPEN_ShutdownScheduled__c.field-meta.xml
<CustomField>
    <fullName>SPEN_ShutdownScheduled__c</fullName>
    <label>Shutdown Scheduled</label>
    <type>Date</type>
</CustomField>