force-app/main/default/objects/SPEN_Delivery__c/fields/SPEN_SiteArrangedCall__c.field-meta.xml
<CustomField>
    <fullName>SPEN_SiteArrangedCall__c</fullName>
    <label>Site Arranged Call</label>
    <type>Date</type>
</CustomField>