force-app/main/default/objects/SPEN_Delivery__c/fields/SPEN_SiteArrangedCallRequired__c.field-meta.xml
<CustomField>
    <fullName>SPEN_SiteArrangedCallRequired__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Site Arranged Call Required</label>
    <type>Checkbox</type>
</CustomField>