force-app/main/default/objects/SPEN_Delivery__c/fields/SPEN_SiteClear__c.field-meta.xml
<CustomField>
    <fullName>SPEN_SiteClear__c</fullName>
    <label>Site Clear</label>
    <type>Date</type>
</CustomField>