force-app/main/default/objects/SPEN_Delivery__c/fields/SPEN_SiteClearConfirmedDate__c.field-meta.xml
<CustomField>
    <fullName>SPEN_SiteClearConfirmedDate__c</fullName>
    <label>Site Clear Confirmed Date</label>
    <type>Date</type>
</CustomField>