force-app/main/default/objects/SPEN_Delivery__c/fields/SPEN_SpecialistType1Scheduled__c.field-meta.xml
<CustomField>
    <fullName>SPEN_SpecialistType1Scheduled__c</fullName>
    <label>Specialist Type 1 Scheduled</label>
    <type>Date</type>
</CustomField>