force-app/main/default/objects/SPEN_Delivery__c/fields/SPEN_SpecialistType2__c.field-meta.xml
<CustomField>
    <fullName>SPEN_SpecialistType2__c</fullName>
    <label>Specialist Type 2</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Live Line Truck</fullName>
            </value>
            <value>
                <fullName>Sub Station Works</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>