force-app/main/default/objects/SPEN_Delivery__c/fields/SPEN_SpecialistType2Scheduled__c.field-meta.xml
<CustomField>
    <fullName>SPEN_SpecialistType2Scheduled__c</fullName>
    <label>Specialist Type 2 Scheduled</label>
    <type>Date</type>
</CustomField>