force-app/main/default/objects/SPEN_Delivery__c/fields/SPEN_SuccessSAP__c.field-meta.xml
<CustomField>
    <fullName>SPEN_SuccessSAP__c</fullName>
    <defaultValue>false</defaultValue>
    <description>CRMD-1342</description>
    <label>Success from SAP</label>
    <type>Checkbox</type>
</CustomField>