force-app/main/default/objects/SPEN_Delivery__c/fields/SPEN_to_Excavate__c.field-meta.xml
<CustomField>
    <fullName>SPEN_to_Excavate__c</fullName>
    <label>SPEN to Excavate</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>All</fullName>
            </value>
            <value>
                <fullName>Private</fullName>
            </value>
            <value>
                <fullName>Public</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
            <value>
                <fullName>Cable Lay Only</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>