force-app/main/default/objects/SPEN_Delivery__c/fields/SPEN_TTCTargetIncenticeFailedProjectSt__c.field-meta.xml
<CustomField>
    <fullName>SPEN_TTCTargetIncenticeFailedProjectSt__c</fullName>
    <label>TTC Target Incentice Failed - Project St</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Arranging a Refund</fullName>
            </value>
            <value>
                <fullName>Awaiting Road Opening Notices</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Customer Not Ready</fullName>
            </value>
            <value>
                <fullName>Embargo</fullName>
            </value>
            <value>
                <fullName>Network Issues</fullName>
            </value>
            <value>
                <fullName>Other (Give Details)</fullName>
            </value>
            <value>
                <fullName>Redesign = Variation</fullName>
            </value>
            <value>
                <fullName>Shutdown</fullName>
            </value>
            <value>
                <fullName>Waiting on a Schedule Date</fullName>
            </value>
            <value>
                <fullName>Wayleaves &amp; Planning</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>