force-app/main/default/objects/SPEN_Delivery__c/validationRules/SPEN_GSCallCompletionDateNotFuture.validationRule-meta.xml
<ValidationRule>
    <fullName>SPEN_GSCallCompletionDateNotFuture</fullName>
    <active>true</active>
    <description>GS Call Completion Date cannot be future date.</description>
    <errorConditionFormula>SPEN_GSCallCompletionDate__c &gt;  NOW()</errorConditionFormula>
    <errorDisplayField>SPEN_GSCallCompletionDate__c</errorDisplayField>
    <errorMessage>GS Call Completion Date cannot be a future date</errorMessage>
</ValidationRule>