force-app/main/default/objects/SPEN_Delivery__c/validationRules/SPEN_GSCallCompletionMandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>SPEN_GSCallCompletionMandatory</fullName>
    <active>true</active>
    <description>CRMD-1342</description>
    <errorConditionFormula>AND( ISPICKVAL(SPEN_GSCallStatus__c , &apos;Successful&apos;),
 ISBLANK(SPEN_GSCallCompletionDate__c ) 
 )</errorConditionFormula>
    <errorDisplayField>SPEN_GSCallCompletionDate__c</errorDisplayField>
    <errorMessage>Please fill the GS Call Completion date if GS status is Successful</errorMessage>
</ValidationRule>