force-app/main/default/objects/SPEN_Delivery__c/validationRules/SPEN_GSStatusLocked.validationRule-meta.xml
<ValidationRule>
    <fullName>SPEN_GSStatusLocked</fullName>
    <active>true</active>
    <description>CRMD-1342</description>
    <errorConditionFormula>AND(SPEN_SuccessSAP__c,
OR( 
AND(ISCHANGED(SPEN_GSCallStatus__c), 
ISPICKVAL(PRIORVALUE(SPEN_GSCallStatus__c),&quot;Successful&quot;)),
(ISCHANGED( SPEN_GSCallCompletionDate__c ))
)

)</errorConditionFormula>
    <errorDisplayField>SPEN_GSCallStatus__c</errorDisplayField>
    <errorMessage>You cannot able to modify GS Call status and GS Call Completion field.</errorMessage>
</ValidationRule>