force-app/main/default/objects/SPEN_Delivery__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>SPEN_Case__c</columns>
    <columns>SPEN_AcceptanceDate__c</columns>
    <columns>SPEN_AcceptanceStatus__c</columns>
    <columns>SPEN_GSCallCompletionDate__c</columns>
    <columns>SPEN_GSCallStatus__c</columns>
    <columns>SPEN_SiteClear__c</columns>
    <columns>SPEN_SchedulingRequested__c</columns>
    <columns>SPEN_SchedulingConfirmed__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>