force-app/main/default/objects/SPEN_Delivery__c/listViews/GS_Call_Incomplete.listView-meta.xml
<ListView>
    <fullName>GS_Call_Incomplete</fullName>
    <columns>NAME</columns>
    <columns>SPEN_CaseDistrict__c</columns>
    <columns>SPEN_AcceptanceDate__c</columns>
    <columns>SPEN_AcceptanceStatus__c</columns>
    <columns>SPEN_GSCallCompletionDate__c</columns>
    <columns>SPEN_GSCallStatus__c</columns>
    <columns>SPEN_SiteClear__c</columns>
    <columns>SPEN_SchedulingRequested__c</columns>
    <columns>SPEN_SchedulingConfirmed__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>SPEN_GSCallStatus__c</field>
        <operation>notEqual</operation>
        <value>Successful,Not Required</value>
    </filters>
    <label>GS Call Incomplete</label>
</ListView>